Update slideshow image paths in index.html

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
       <div class="slideshow-container">
 
         <div class="slide fade">
-          <img src="Images/Slideshow Image 1.jpg" alt="Luxury eyelash extensions">
+          <img src="Images2/Slideshow Image 1.jpg" alt="Luxury eyelash extensions">
         </div>
 
         <div class="slide fade">
-          <img src="Images/Slideshow Image 2.jpg" alt="Professional nail art design">
+          <img src="Images22/Slideshow Image 2.jpg" alt="Professional nail art design">
         </div>
 
         <div class="slide fade">
-          <img src="Images/Slideshow Image 8.jpg" alt="Lash and nail beauty treatment">
+          <img src="Images2/Slideshow Image 8.jpg" alt="Lash and nail beauty treatment">
         </div>
 
         <!-- Slideshow Controls -->
